--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -49,9 +49,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation 'com.firebaseui:firebase-ui-auth:5.0.0'
-    implementation 'com.google.firebase:firebase-database:16.0.4'
+    implementation 'com.google.firebase:firebase-database:17.0.0'
     implementation 'com.google.firebase:firebase-core:16.0.9'
     implementation 'com.google.firebase:firebase-storage:19.0.0'
+    implementation 'com.google.firebase:firebase-auth:17.0.0'
+    implementation 'com.synnapps:carouselview:0.1.4'
 
     implementation 'com.baoyz.swipemenulistview:library:1.3.0'
 
