--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.9'
     implementation 'com.google.firebase:firebase-storage:19.0.0'
     implementation 'com.google.firebase:firebase-auth:17.0.0'
+    implementation 'com.google.firebase:firebase-auth:17.0.0'
+
     implementation 'com.synnapps:carouselview:0.1.4'
 
     implementation 'com.baoyz.swipemenulistview:library:1.3.0'
