--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo_honda"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo_honda"
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.Light.NoActionBar">
         <activity android:name=".Home_Fragment.Home_Child.ThemtintucActivity"></activity>
@@ -33,9 +33,13 @@
         </activity>
         <activity android:name=".TaoTaiKhoan"></activity>
         <activity android:name=".CaiDat"></activity>
-        <activity android:name=".test"></activity>
         <activity android:name=".DaiLy"></activity>
-        <activity android:name=".XeActivity"></activity>
+        <activity android:name=".SanPham_Fragment.SanphamFragment"></activity>
+        <activity android:name=".XeActivity"
+            android:parentActivityName=".SanPham_Fragment.SanphamFragment">
+
+        </activity>
+        <activity android:name=".ChiTietSanPham"></activity>
         <activity android:name=".SanPham_Fragment.SanPham_Child.TraCuuSPFragment"></activity>
         <activity android:name=".Confirm_Ad" android:theme="@style/Theme.AppCompat.DayNight.Dialog"></activity>
     </application>
