--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
 
         </activity>
         <activity android:name=".TaoTaiKhoan"></activity>
+        <activity android:name=".Chitiettintuc"></activity>
         <activity android:name=".CaiDat"></activity>
         <activity android:name=".DaiLy"></activity>
         <activity android:name=".SanPham_Fragment.SanphamFragment"></activity>
